# Modern-CXX-Parse-To-Int-Generator

./: CMakeLists.txt  Modern-C++-Parse-To-Int.cpp
